chore: apply first formatting

--- a/apps/back-ends/users-service/project.json
+++ b/apps/back-ends/users-service/project.json
@@ -7,22 +7,16 @@
   "targets": {
     "build": {
       "executor": "@nx/esbuild:esbuild",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "defaultConfiguration": "production",
       "options": {
         "platform": "node",
         "outputPath": "dist/apps/back-ends/users-service",
-        "format": [
-          "cjs"
-        ],
+        "format": ["cjs"],
         "bundle": false,
         "main": "apps/back-ends/users-service/src/users.main.ts",
         "tsConfig": "apps/back-ends/users-service/tsconfig.app.json",
-        "assets": [
-          "apps/back-ends/users-service/src/assets"
-        ],
+        "assets": ["apps/back-ends/users-service/src/assets"],
         "generatePackageJson": true,
         "esbuildOptions": {
           "sourcemap": true,
@@ -46,9 +40,7 @@
     "serve": {
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
-      "dependsOn": [
-        "build"
-      ],
+      "dependsOn": ["build"],
       "options": {
         "buildTarget": "@mono/users-service:build",
         "runBuildTargetDependencies": false
