--- a/libs/proto-descriptors/project.json
+++ b/libs/proto-descriptors/project.json
@@ -20,26 +20,18 @@
         "cwd": "libs/proto-descriptors",
         "command": "./generate-ts-files.sh"
       },
-      "dependsOn": [
-        "make-gen-script-executable"
-      ]
+      "dependsOn": ["make-gen-script-executable"]
     },
     "build": {
       "executor": "@nx/js:swc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/libs/proto-descriptors",
         "main": "libs/proto-descriptors/src/index.ts",
         "tsConfig": "libs/proto-descriptors/tsconfig.lib.json",
-        "assets": [
-          "libs/proto-descriptors/src/**/*.proto"
-        ]
+        "assets": ["libs/proto-descriptors/src/**/*.proto"]
       },
-      "dependsOn": [
-        "generate-ts-from-proto"
-      ]
+      "dependsOn": ["generate-ts-from-proto"]
     }
   }
 }
