--- a/apps/back-ends/users-service-e2e/project.json
+++ b/apps/back-ends/users-service-e2e/project.json
@@ -2,22 +2,16 @@
   "name": "@mono/users-service-e2e",
   "$schema": "../../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
-  "implicitDependencies": [
-    "@mono/users-service"
-  ],
+  "implicitDependencies": ["@mono/users-service"],
   "targets": {
     "e2e": {
       "executor": "@nx/jest:jest",
-      "outputs": [
-        "{workspaceRoot}/coverage/{e2eProjectRoot}"
-      ],
+      "outputs": ["{workspaceRoot}/coverage/{e2eProjectRoot}"],
       "options": {
         "jestConfig": "apps/back-ends/users-service-e2e/jest.config.ts",
         "passWithNoTests": true
       },
-      "dependsOn": [
-        "@mono/users-service:build"
-      ]
+      "dependsOn": ["@mono/users-service:build"]
     }
   }
 }
