--- a/libs/models/project.json
+++ b/libs/models/project.json
@@ -15,20 +15,14 @@
     },
     "build": {
       "executor": "@nx/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/libs/models",
         "main": "libs/models/src/index.ts",
         "tsConfig": "libs/models/tsconfig.lib.json",
-        "assets": [
-          "libs/models/*.md"
-        ]
+        "assets": ["libs/models/*.md"]
       },
-      "dependsOn": [
-        "generate-barrels"
-      ]
+      "dependsOn": ["generate-barrels"]
     }
   }
 }
