--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "@mono/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "prepare": "husky"
+  },
   "private": true,
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
@@ -26,6 +28,7 @@
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
     "grpc-health-check": "^2.0.2",
+    "husky": "^9.1.7",
     "jaeger-client": "^3.19.0"
   },
   "devDependencies": {
