--- a/package.json
+++ b/package.json
@@ -9,30 +9,29 @@
   "dependencies": {
     "@fastify/autoload": "~5.7.1",
     "@fastify/sensible": "~5.2.0",
-    "@grpc/grpc-js": "^1.12.5",
-    "@grpc/proto-loader": "^0.7.13",
-    "@grpc/reflection": "^1.0.4",
-    "@opentelemetry/api": "^1.9.0",
-    "@opentelemetry/context-async-hooks": "^1.30.0",
-    "@opentelemetry/exporter-trace-otlp-proto": "^0.57.0",
-    "@opentelemetry/instrumentation": "^0.57.0",
-    "@opentelemetry/instrumentation-fastify": "^0.44.0",
-    "@opentelemetry/instrumentation-grpc": "^0.57.0",
-    "@opentelemetry/instrumentation-http": "^0.57.0",
-    "@opentelemetry/resources": "^1.30.0",
-    "@opentelemetry/sdk-metrics": "^1.30.0",
-    "@opentelemetry/sdk-node": "^0.57.0",
-    "@opentelemetry/sdk-trace-node": "^1.30.0",
-    "@opentelemetry/semantic-conventions": "^1.28.0",
-    "axios": "^1.6.0",
+    "@grpc/grpc-js": "~1.12.5",
+    "@grpc/proto-loader": "~0.7.13",
+    "@grpc/reflection": "~1.0.4",
+    "@opentelemetry/api": "~1.9.0",
+    "@opentelemetry/context-async-hooks": "~1.30.0",
+    "@opentelemetry/exporter-trace-otlp-proto": "~0.57.0",
+    "@opentelemetry/instrumentation": "~0.57.0",
+    "@opentelemetry/instrumentation-fastify": "~0.44.0",
+    "@opentelemetry/instrumentation-grpc": "~0.57.0",
+    "@opentelemetry/instrumentation-http": "~0.57.0",
+    "@opentelemetry/resources": "~1.30.0",
+    "@opentelemetry/sdk-metrics": "~1.30.0",
+    "@opentelemetry/sdk-node": "~0.57.0",
+    "@opentelemetry/sdk-trace-node": "~1.30.0",
+    "@opentelemetry/semantic-conventions": "~1.28.0",
+    "axios": "~1.6.0",
     "fastify": "~4.13.0",
     "fastify-plugin": "~4.5.0",
-    "grpc-health-check": "^2.0.2",
-    "husky": "^9.1.7",
-    "jaeger-client": "^3.19.0"
+    "grpc-health-check": "~2.0.2",
+    "jaeger-client": "~3.19.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.8.0",
+    "@eslint/js": "~9.8.0",
     "@nx/esbuild": "20.3.0",
     "@nx/eslint": "20.3.0",
     "@nx/eslint-plugin": "20.3.0",
@@ -44,20 +43,21 @@
     "@swc/cli": "~0.3.12",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
-    "@types/jest": "^29.5.12",
+    "@types/jest": "~29.5.12",
     "@types/node": "~18.16.9",
-    "barrelsby": "^2.8.1",
-    "esbuild": "^0.19.2",
-    "eslint": "^9.8.0",
-    "eslint-config-prettier": "^9.0.0",
-    "jest": "^29.7.0",
-    "jest-environment-node": "^29.7.0",
+    "barrelsby": "~2.8.1",
+    "esbuild": "~0.19.2",
+    "eslint": "~9.8.0",
+    "eslint-config-prettier": "~9.0.0",
+    "husky": "~9.1.7",
+    "jest": "~29.7.0",
+    "jest-environment-node": "~29.7.0",
     "nx": "20.3.0",
-    "prettier": "^2.6.2",
-    "ts-jest": "^29.1.0",
+    "prettier": "~2.6.2",
+    "ts-jest": "~29.1.0",
     "ts-node": "10.9.1",
-    "tslib": "^2.3.0",
+    "tslib": "~2.3.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.13.0"
+    "typescript-eslint": "~8.13.0"
   }
 }
