chore: add pre-commit hook

--- a/apps/back-ends/users-service-e2e/project.json
+++ b/apps/back-ends/users-service-e2e/project.json
@@ -12,6 +12,14 @@
         "passWithNoTests": true
       },
       "dependsOn": ["@mono/users-service:build"]
+    },
+    "format:check": {
+      "executor": "nx:run-commands",
+      "cache": true,
+      "options": {
+        "cwd": "apps/back-ends/users-service-e2e",
+        "command": "prettier . --check"
+      }
     }
   }
 }
