--- a/apps/back-for-fronts/web-e2e/project.json
+++ b/apps/back-for-fronts/web-e2e/project.json
@@ -12,6 +12,14 @@
         "passWithNoTests": true
       },
       "dependsOn": ["@mono/bffs/web:build"]
+    },
+    "format:check": {
+      "executor": "nx:run-commands",
+      "cache": true,
+      "options": {
+        "cwd": "apps/back-for-fronts/web-e2e",
+        "command": "prettier . --check"
+      }
     }
   }
 }
