--- a/libs/proto-descriptors/package.json
+++ b/libs/proto-descriptors/package.json
@@ -2,6 +2,9 @@
   "name": "@mono/proto-descriptors",
   "version": "0.0.1",
   "dependencies": {
+    "@grpc/grpc-js": "~1.12.5",
+    "@grpc/proto-loader": "~0.7.13",
+    "@grpc/reflection": "~1.0.4",
     "@swc/helpers": "~0.5.11"
   },
   "type": "commonjs",
@@ -9,6 +12,6 @@
   "typings": "./src/index.d.ts",
   "private": true,
   "scripts": {
-    "generate-barrels": "npx barrelsby --delete -d ./src"
+    "generate-barrels": "npx barrelsby -q --delete -d ./src"
   }
 }
