build: setup Docker build for apps

--- a/apps/back-ends/users-service/project.json
+++ b/apps/back-ends/users-service/project.json
@@ -7,16 +7,22 @@
   "targets": {
     "build": {
       "executor": "@nx/esbuild:esbuild",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
         "platform": "node",
         "outputPath": "dist/apps/back-ends/users-service",
-        "format": ["cjs"],
+        "format": [
+          "cjs"
+        ],
         "bundle": false,
         "main": "apps/back-ends/users-service/src/users.main.ts",
         "tsConfig": "apps/back-ends/users-service/tsconfig.app.json",
-        "assets": ["apps/back-ends/users-service/src/assets"],
+        "assets": [
+          "apps/back-ends/users-service/src/assets"
+        ],
         "generatePackageJson": true,
         "esbuildOptions": {
           "sourcemap": true,
@@ -28,6 +34,7 @@
       "configurations": {
         "development": {},
         "production": {
+          "bundle": true,
           "esbuildOptions": {
             "sourcemap": false,
             "outExtension": {
@@ -40,7 +47,9 @@
     "serve": {
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
-      "dependsOn": ["build"],
+      "dependsOn": [
+        "build"
+      ],
       "options": {
         "buildTarget": "@mono/users-service:build",
         "runBuildTargetDependencies": false
@@ -52,6 +61,16 @@
         "production": {
           "buildTarget": "@mono/users-service:build:production"
         }
+      }
+    },
+    "docker-build": {
+      "executor": "nx:run-commands",
+      "dependsOn": [
+        "build"
+      ],
+      "options": {
+        "cwd": "apps/back-ends/users-service",
+        "command": "docker build -f Dockerfile . -t mono/users-service"
       }
     },
     "format:check": {
