--- a/apps/back-for-fronts/web/project.json
+++ b/apps/back-for-fronts/web/project.json
@@ -7,16 +7,22 @@
   "targets": {
     "build": {
       "executor": "@nx/esbuild:esbuild",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "defaultConfiguration": "production",
       "options": {
         "platform": "node",
         "outputPath": "dist/apps/back-for-fronts/web",
-        "format": ["cjs"],
+        "format": [
+          "cjs"
+        ],
         "bundle": false,
         "main": "apps/back-for-fronts/web/src/web.main.ts",
         "tsConfig": "apps/back-for-fronts/web/tsconfig.app.json",
-        "assets": ["apps/back-for-fronts/web/src/assets"],
+        "assets": [
+          "apps/back-for-fronts/web/src/assets"
+        ],
         "generatePackageJson": true,
         "esbuildOptions": {
           "sourcemap": true,
@@ -40,7 +46,9 @@
     "serve": {
       "executor": "@nx/js:node",
       "defaultConfiguration": "development",
-      "dependsOn": ["build"],
+      "dependsOn": [
+        "build"
+      ],
       "options": {
         "buildTarget": "@mono/bffs/web:build",
         "runBuildTargetDependencies": false
@@ -52,6 +60,16 @@
         "production": {
           "buildTarget": "@mono/bffs/web:build:production"
         }
+      }
+    },
+    "docker-build": {
+      "executor": "nx:run-commands",
+      "dependsOn": [
+        "build"
+      ],
+      "options": {
+        "cwd": "apps/back-for-fronts/web",
+        "command": "docker build -f Dockerfile . -t mono/bffs/web"
       }
     },
     "format:check": {
