fix: add commit blocking on pre-commit hook

--- a/apps/back-ends/users-service-e2e/project.json
+++ b/apps/back-ends/users-service-e2e/project.json
@@ -17,8 +17,7 @@
       "executor": "nx:run-commands",
       "cache": true,
       "options": {
-        "cwd": "apps/back-ends/users-service-e2e",
-        "command": "prettier . --check"
+        "command": "prettier apps/back-ends/users-service-e2e --check"
       }
     }
   }
