--- a/.github/workflows/push-services-images.yaml
+++ b/.github/workflows/push-services-images.yaml
@@ -1,9 +1,6 @@
 name: Push services images to Artifact Registry
 
-on:
-  push:
-    branches:
-      - 'main'
+on: workflow_call
 
 jobs:
   push-images:
@@ -43,7 +40,7 @@ jobs:
         run: |
           docker_images=($(docker images --format "{{.Repository}}" | sort -u))
           for image in "${docker_images[@]}"; do
-            docker image tag $image us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/docker-images/$image:latest
+            docker image tag $image us-central1-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/docker-images/$image:${{ github.sha }}
             docker rmi $image
           done
 
@@ -53,6 +50,6 @@ jobs:
         run: |
           docker_images=($(docker images --format "{{.Repository}}" | sort -u))
           for image in "${docker_images[@]}"; do
-            docker push $image:latest
+            docker push $image:${{ github.sha }}
           done
 
