--- a/.github/workflows/build-services-images.yaml
+++ b/.github/workflows/build-services-images.yaml
@@ -13,6 +13,9 @@ jobs:
   build-images:
     runs-on: ubuntu-latest
 
+    outputs:
+      are_services_affected: ${{ steps.save-images.outputs.are_services_affected }}
+
     steps:
       - name: Checkout code
         id: checkout_code
@@ -39,6 +42,7 @@ jobs:
         run: npx nx affected --base=origin/main --head=$GITHUB_SHA -t docker-build
 
       - name: Save Docker images
+        id: save-images
         run: |
           docker_images=($(docker images --format "{{.Repository}}" | sort -u))
           if [[ -z "$docker_images" ]]; then
