--- a/.github/workflows/push-services-images.yaml
+++ b/.github/workflows/push-services-images.yaml
@@ -27,8 +27,8 @@ jobs:
         uses: google-github-actions/auth@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          workload_identity_provider: "projects/${{ secrets.GCP_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/github-actions-pool/providers/github-actions-provider"
-          service_account: ci-registry-writer-sa@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
+          workload_identity_provider: "projects/${{ secrets.GCP_PROJECT_NUMBER }}/locations/global/workloadIdentityPools/${{ secrets.GCP_WIF_POOL }}/providers/${{ secrets.GCP_WIF_POOL_PROVIDER }}"
+          service_account: ${{ secrets.GCP_SA_NAME }}@${{ secrets.GCP_PROJECT_ID }}.iam.gserviceaccount.com
 
       - name: 'Set up Cloud SDK'
         uses: 'google-github-actions/setup-gcloud@v2'
